--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Shopping List</title>
+	<title>Shopping List</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 
-  <div class="container">
-    <h1>Shopping List</h1>
+	<div class="container">
+		<h1>Shopping List</h1>
 
-    <form id="js-shopping-list-form">
-      <label for="shopping-list-entry">Add an item</label>
+		<form id="js-shopping-list-form">
+			<label for="shopping-list-entry">Add an item</label>
       <input type="text" name="shopping-list-entry" id="shopping-list-entry" placeholder="e.g., broccoli">
       <button type="submit">Add item</button>
     </form>
@@ -66,6 +68,7 @@
       </li>
     </ul>
   </div>
-
+ <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
